[package]
name = "pico-bitcoin-wallet"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.0"
bip21 = "0.3.0"
electrs-bitcoincore-rpc = "0.17.0-e2"
bitcoin = "0.30.0"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
dirs = "4.0.0"
anyhow = "1.0.70"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.5.11"
rand = "0.8.5"
